welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:5: error: Unmatched closing brace '}' ignored here
    avance()}
            ^FlowerPot:16: error: expected class or object definition
def growFlowers(){
^FlowerPot:20: error: Unmatched closing brace '}' ignored here
}
^