welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def dessinFleur(c:Color){
  setCouleurBrosse()
  baisseBrosse()
  for (compteur<- 1 to 3){
    avance()}
  recule()
  gauche()
  avance()
  for (compteur<- 1 to 3){
    recule()}
  
  }
  
  }
}
def growFlowers(){
  dessinFleur(Color.RED)
}